--- a/src/main/resources/profile/application-local.yml
+++ b/src/main/resources/profile/application-local.yml
@@ -14,6 +14,7 @@ spring:
     properties:
       hibernate:
         format_sql: true
+        show_sql: true
     hibernate:
       ddl-auto: create
 ---
